Update core/src/main/java/be/cytomine/utils/PreparedRequest.java
Co-authored-by: Ba Thien Le <bathien.le.pro@gmail.com>